@@ -4,8 +4,6 @@ import at.nullpointer.trayrss.configuration.feeds.db.Feed;
 
 import java.util.Collection;
 
-import org.hibernate.classic.Session;
-
 public interface FeedDAO {
 
 	public Collection<Feed> getFeeds();
